# ChangeLog for games-fps/uhexen2-cvs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080321.ebuild, +uhexen2-cvs-20080404.ebuild:
  Version bump

  21 Mar 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080307.ebuild, +uhexen2-cvs-20080321.ebuild:
  Version bump

  09 Mar 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080208.ebuild, +uhexen2-cvs-20080307.ebuild:
  Version bump

  17 Feb 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080129.ebuild, +uhexen2-cvs-20080208.ebuild:
  Version bump

  30 Jan 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080112.ebuild, +uhexen2-cvs-20080129.ebuild:
  Version bump

  13 Jan 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080110.ebuild, +uhexen2-cvs-20080112.ebuild:
  Version bump

  12 Jan 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20080104.ebuild, +uhexen2-cvs-20080110.ebuild:
  Version bump

  05 Jan 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20071224.ebuild, +uhexen2-cvs-20080104.ebuild:
  Version bump (and an happy new year :) )

  25 Dec 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20071215.ebuild, +uhexen2-cvs-20071224.ebuild:
  Version bump

  19 Dec 2007; Davide Cendron (scen) <scen@gentoo.org>
  uhexen2-cvs-20071215.ebuild:
  Fixed SRC_URI, because 20071215 CVS tarball is available on SF mirrors

  18 Dec 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20071125.ebuild, +uhexen2-cvs-20071215.ebuild:
  Version bump

  25 Nov 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20071117.ebuild, +uhexen2-cvs-20071125.ebuild:
  Version bump

  19 Nov 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-cvs-20071114.ebuild, +uhexen2-cvs-20071117.ebuild:
  Version bump

  14 Nov 2007; Davide Cendron (scen) <scen@gentoo.org>