@@ -1,6 +1,6 @@
 DIST gamedata-all-1.19a.tgz 3703488 RMD160 3dad3b4b3aa80fb595749a6768376a245db89c12 SHA1 25ce550057c511b5cc2e4372163c0216eac35fcd SHA256 b9b9561b4155bfe3f8005315a7f8f95a567c2ebbcb2a950ad05dcb1702ac68de
 DIST hexenworld-pakfiles-0.15.tgz 4948641 RMD160 bbc3d2368b01d60accf457b42f9ed5d247f94d1b SHA1 a7600b80b4205788b64fb57191e194c28b55b522 SHA256 49462cdf984deee7350d03c7d192d1c34d682647ffc9d06de4308e0a7c71c4d9
 DIST uhexen2-cvs-20080404.tgz 6434136 RMD160 9d931a13fc7e4c69d4b4183aacda18a76fcd62e6 SHA1 10716270bc65fed4b7484c60b64e71571b47d337 SHA256 5043b8642823a7493b0ff0f6105e79e475b597f9214769efd005366b0e09a172
-EBUILD uhexen2-cvs-20080404.ebuild 12914 RMD160 792f57fb99fd57e29e79654fd9714f256ed40de3 SHA1 6f0f52ebd0e8a478239555c46f393ab9f8682cae SHA256 0835bcad0390ccf562d6fbd5ef08bef1b45a0c6af30b4a265573d42986bd1500
-MISC ChangeLog 9136 RMD160 216141fb565b5ec92b946c7f086aa130cff2096a SHA1 cf5c720a5d9fce6083414723cfdfa186cee352ec SHA256 d4db5aaaddf49ed6f5b7db6234ae066d798bcc1797bf5d0fea2b9aacb5dcd377
+EBUILD uhexen2-cvs-20080404.ebuild 12924 RMD160 9eff55ef8e6c21992816237ac5dd1e1a2738de74 SHA1 94eff6d620d3a1643b5c825558307803934d9005 SHA256 95e35ebb89989b122640146e265da0f4b928e58d23ba331b3885bc9f6f8b7a5b
+MISC ChangeLog 9244 RMD160 c7892baca817f8563401ee2e2abcff511ed01155 SHA1 ba3ec4a09d439c22c477d90a6d1c89e8135e3490 SHA256 ec1d2d92e4559ba61fa76d4022c7f77781babda6ec39788b41b59ac27c33def2
 MISC metadata.xml 322 RMD160 f4bfe5b65994822f6e2c353556232c8eac25c50c SHA1 5e06f5726217482155d7eadde86107b1def891fe SHA256 8bbf84c0f56f602764f6041d84a1376dce6300548b116abde0dbd9d241218977
