@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +uhexen2-cvs-20080321.ebuild:
+  Fix quotation
+
   06 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
   -uhexen2-cvs-20080321.ebuild, +uhexen2-cvs-20080404.ebuild:
   Version bump
